<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.max.recordplayvisualizationsound.Activiites.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record"
        android:id="@+id/button_record"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="37dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/button_stop"
        android:layout_alignTop="@+id/button_record"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/button_play"
        android:layout_alignTop="@+id/button_stop"
        android:layout_alignParentRight="true"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_playing_recording"
        android:id="@+id/button_stop_playing_recording"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/button_stop"
        android:layout_toStartOf="@+id/button_play" />

    <Button
        android:id="@+id/button_to_json_xml"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:enabled="false"
        android:text="@string/save_coordinates_to_json_and_xml"
        android:visibility="visible"
        android:layout_below="@+id/button_stop_playing_recording"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        tools:layout_editor_absoluteY="400dp"
        tools:layout_editor_absoluteX="32dp"
        android:layout_marginBottom="33dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
    </com.google.android.gms.ads.AdView>



</RelativeLayout>
